--- a/TDWT_MSG/files/说明页/styles.css
+++ b/TDWT_MSG/files/说明页/styles.css
@@ -1,11 +1,15 @@
 ﻿body {
   margin:0px;
-  background-image:none;
-  position:static;
-  left:auto;
-  width:1250px;
-  margin-left:0;
-  margin-right:0;
+  background-image:url('../../images/login/bg.jpg');
+  background-position:left top;
+  background-repeat:no-repeat;
+  background-attachment:scroll;
+  background-size:1920px 1200px;
+  position:relative;
+  left:-50px;
+  width:1200px;
+  margin-left:auto;
+  margin-right:auto;
   text-align:left;
 }
 #base {
