--- a/TDWT_MSG/files/企业用户详情/styles.css
+++ b/TDWT_MSG/files/企业用户详情/styles.css
@@ -2058,7 +2058,7 @@
   border-width:0px;
   position:absolute;
   left:188px;
-  top:490px;
+  top:498px;
   width:71px;
   height:20px;
   font-family:'PingFangSC-Regular', 'PingFang SC';
@@ -2086,7 +2086,7 @@
   border-width:0px;
   position:absolute;
   left:160px;
-  top:489px;
+  top:497px;
   width:22px;
   height:22px;
 }
@@ -2122,7 +2122,7 @@
   border-width:0px;
   position:absolute;
   left:259px;
-  top:491px;
+  top:499px;
   width:57px;
   height:20px;
   font-family:'PingFangSC-Regular', 'PingFang SC';
@@ -4195,7 +4195,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:65px;
+  width:97px;
   height:22px;
   background:inherit;
   background-color:rgba(255, 255, 255, 0);
@@ -4215,7 +4215,7 @@
   position:absolute;
   left:181px;
   top:782px;
-  width:65px;
+  width:97px;
   height:22px;
   font-family:'PingFangSC-Regular', 'PingFang SC';
   font-weight:400;
@@ -4228,7 +4228,7 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:65px;
+  width:97px;
   white-space:nowrap;
 }
 #u1475_div {
@@ -6607,4 +6607,115 @@
   width:0px;
   visibility:hidden;
   word-wrap:break-word;
+}
+#u1550 {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  height:0px;
+}
+#u1551_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:43px;
+  height:20px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+  color:#707070;
+}
+#u1551 {
+  border-width:0px;
+  position:absolute;
+  left:188px;
+  top:458px;
+  width:43px;
+  height:20px;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+  color:#707070;
+}
+#u1551_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:43px;
+  white-space:nowrap;
+}
+#u1552_img {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:22px;
+  height:22px;
+}
+#u1552 {
+  border-width:0px;
+  position:absolute;
+  left:160px;
+  top:457px;
+  width:22px;
+  height:22px;
+}
+#u1552_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:0px;
+  visibility:hidden;
+  word-wrap:break-word;
+}
+#u1553_div {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:54px;
+  height:20px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+  color:#707070;
+}
+#u1553 {
+  border-width:0px;
+  position:absolute;
+  left:231px;
+  top:457px;
+  width:54px;
+  height:20px;
+  font-family:'PingFangSC-Regular', 'PingFang SC';
+  font-weight:400;
+  font-style:normal;
+  color:#707070;
+}
+#u1553_text {
+  border-width:0px;
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:54px;
+  white-space:nowrap;
 }
